first lab completed

--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Next it's time to load the API keys into environment variables\n",
     "# If this returns false, see the next cell!\n",
@@ -141,9 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the key - if you're not using OpenAI, check whichever key you're using! Ollama doesn't need a key.\n",
     "\n",
@@ -159,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,9 +216,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 2 equals 4.\n"
+     ]
+    }
+   ],
    "source": [
     "# And now call it! Any problems, head to the troubleshooting guide\n",
     "# This uses GPT 4.1 nano, the incredibly cheap model\n",
@@ -216,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,9 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If two trains start from opposite cities 300 miles apart and travel towards each other—Train A at 60 mph and Train B at 40 mph—but Train B pauses for 30 minutes exactly halfway through the journey, how long will it take from the moment they start until they meet?\n"
+     ]
+    }
+   ],
    "source": [
     "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
     "\n",
@@ -246,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,9 +291,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's break down the problem step-by-step:\n",
+      "\n",
+      "### Given:\n",
+      "- Distance between two cities = 300 miles\n",
+      "- Train A speed = 60 mph\n",
+      "- Train B speed = 40 mph\n",
+      "- Train B pauses for 30 minutes (0.5 hours) **exactly halfway through its journey**.\n",
+      "\n",
+      "We need to find the time from the start until the two trains meet.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Step 1: Setup\n",
+      "Trains start at the same time, from opposite cities, and travel towards each other.\n",
+      "\n",
+      "- Train A travels from city A towards city B.\n",
+      "- Train B travels from city B towards city A.\n",
+      "\n",
+      "### Step 2: Define variables\n",
+      "Let \\( t \\) = time (in hours) after which the two trains meet.\n",
+      "\n",
+      "During the time \\( t \\):\n",
+      "\n",
+      "- Distance covered by Train A = \\( 60t \\) miles\n",
+      "- Distance covered by Train B = \\( 40 \\times (t - \\text{pause time}) \\) miles\n",
+      "\n",
+      "**Pause note:** Train B pauses once for 0.5 hours (30 minutes) exactly halfway through the distance it needs to cover.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Step 3: When does Train B pause?\n",
+      "\n",
+      "- Train B's total journey is 300 miles.\n",
+      "- Halfway for Train B = 150 miles.\n",
+      "- At 40 mph:\n",
+      "  - Time to reach halfway point = \\( \\frac{150}{40} = 3.75 \\) hours.\n",
+      "\n",
+      "So, Train B travels for some time until it reaches 150 miles traveled, then pauses for 0.5 hours, then resumes.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Step 4: Consider cases for \\( t \\)\n",
+      "\n",
+      "The trains meet at time \\( t \\). At that time:\n",
+      "\n",
+      "- If \\( t \\leq 3.75 \\), Train B has not yet reached halfway point, so no pause yet.\n",
+      "- If \\( t > 3.75 \\), Train B has already paused once.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Step 5: Since the trains are moving toward each other, they will meet before Train B finishes its total 300 miles journey, so we check:\n",
+      "\n",
+      "Is the meeting time less than 3.75 hours?\n",
+      "\n",
+      "- Sum of speeds when moving: \\( 60 + 40 = 100 \\) mph.\n",
+      "- If there were no pauses, time to meet would be \\( \\frac{300}{100} = 3 \\) hours.\n",
+      "\n",
+      "Since 3 hours < 3.75 hours, Train B meets Train A **before** it reaches the halfway point, so no pause yet.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Step 6: Conclusion if \\( t \\leq 3.75 \\) (no pause)\n",
+      "\n",
+      "- Total distance traveled = 300 miles.\n",
+      "- Distance covered by Train A + Train B = 300 miles.\n",
+      "- Train B has not paused yet, so effective moving time for Train B = \\( t \\).\n",
+      "\n",
+      "Equation:\n",
+      "\\[\n",
+      "60t + 40t = 300\n",
+      "\\]\n",
+      "\\[\n",
+      "100t = 300\n",
+      "\\]\n",
+      "\\[\n",
+      "t = 3 \\text{ hours}\n",
+      "\\]\n",
+      "\n",
+      "Since \\( 3 < 3.75 \\), Train B has **not yet reached the halfway pause point**, so it has never stopped yet.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Final answer:\n",
+      "\n",
+      "**The two trains will meet after 3 hours.**\n",
+      "\n",
+      "---\n",
+      "\n",
+      "# **Summary:**\n",
+      "\n",
+      "- Without the pause, they would meet after 3 hours.\n",
+      "- Train B’s pause occurs at 3.75 hours if it reaches halfway.\n",
+      "- Since they meet at 3 hours (before the pause point), **Train B never pauses before meeting**.\n",
+      "- Hence the pause does not affect the meeting time.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "**Answer: The trains meet after 3 hours.**\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
@@ -273,9 +413,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Let's break down the problem step-by-step:\n",
+       "\n",
+       "### Given:\n",
+       "- Distance between two cities = 300 miles\n",
+       "- Train A speed = 60 mph\n",
+       "- Train B speed = 40 mph\n",
+       "- Train B pauses for 30 minutes (0.5 hours) **exactly halfway through its journey**.\n",
+       "\n",
+       "We need to find the time from the start until the two trains meet.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Step 1: Setup\n",
+       "Trains start at the same time, from opposite cities, and travel towards each other.\n",
+       "\n",
+       "- Train A travels from city A towards city B.\n",
+       "- Train B travels from city B towards city A.\n",
+       "\n",
+       "### Step 2: Define variables\n",
+       "Let \\( t \\) = time (in hours) after which the two trains meet.\n",
+       "\n",
+       "During the time \\( t \\):\n",
+       "\n",
+       "- Distance covered by Train A = \\( 60t \\) miles\n",
+       "- Distance covered by Train B = \\( 40 \\times (t - \\text{pause time}) \\) miles\n",
+       "\n",
+       "**Pause note:** Train B pauses once for 0.5 hours (30 minutes) exactly halfway through the distance it needs to cover.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Step 3: When does Train B pause?\n",
+       "\n",
+       "- Train B's total journey is 300 miles.\n",
+       "- Halfway for Train B = 150 miles.\n",
+       "- At 40 mph:\n",
+       "  - Time to reach halfway point = \\( \\frac{150}{40} = 3.75 \\) hours.\n",
+       "\n",
+       "So, Train B travels for some time until it reaches 150 miles traveled, then pauses for 0.5 hours, then resumes.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Step 4: Consider cases for \\( t \\)\n",
+       "\n",
+       "The trains meet at time \\( t \\). At that time:\n",
+       "\n",
+       "- If \\( t \\leq 3.75 \\), Train B has not yet reached halfway point, so no pause yet.\n",
+       "- If \\( t > 3.75 \\), Train B has already paused once.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Step 5: Since the trains are moving toward each other, they will meet before Train B finishes its total 300 miles journey, so we check:\n",
+       "\n",
+       "Is the meeting time less than 3.75 hours?\n",
+       "\n",
+       "- Sum of speeds when moving: \\( 60 + 40 = 100 \\) mph.\n",
+       "- If there were no pauses, time to meet would be \\( \\frac{300}{100} = 3 \\) hours.\n",
+       "\n",
+       "Since 3 hours < 3.75 hours, Train B meets Train A **before** it reaches the halfway point, so no pause yet.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Step 6: Conclusion if \\( t \\leq 3.75 \\) (no pause)\n",
+       "\n",
+       "- Total distance traveled = 300 miles.\n",
+       "- Distance covered by Train A + Train B = 300 miles.\n",
+       "- Train B has not paused yet, so effective moving time for Train B = \\( t \\).\n",
+       "\n",
+       "Equation:\n",
+       "\\[\n",
+       "60t + 40t = 300\n",
+       "\\]\n",
+       "\\[\n",
+       "100t = 300\n",
+       "\\]\n",
+       "\\[\n",
+       "t = 3 \\text{ hours}\n",
+       "\\]\n",
+       "\n",
+       "Since \\( 3 < 3.75 \\), Train B has **not yet reached the halfway pause point**, so it has never stopped yet.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Final answer:\n",
+       "\n",
+       "**The two trains will meet after 3 hours.**\n",
+       "\n",
+       "---\n",
+       "\n",
+       "# **Summary:**\n",
+       "\n",
+       "- Without the pause, they would meet after 3 hours.\n",
+       "- Train B’s pause occurs at 3.75 hours if it reaches halfway.\n",
+       "- Since they meet at 3 hours (before the pause point), **Train B never pauses before meeting**.\n",
+       "- Hence the pause does not affect the meeting time.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "**Answer: The trains meet after 3 hours.**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -318,23 +568,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Supply chain management could be ripe for an Agentic AI solution to autonomously optimize logistics, forecast demand, and manage inventory in real-time.\n",
+      "A major pain-point in supply chain management is the frequent lack of real-time visibility and coordination, leading to delays, stockouts, and increased costs.\n",
+      "Solution : An Agentic AI solution could autonomously monitor and analyze supply chain data across all stages to predict disruptions, optimize routing, and coordinate suppliers and logistics partners in real-time.\n"
+     ]
+    }
+   ],
    "source": [
     "# First create the messages:\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"Something here\"}]\n",
+    "messages = [{\"role\": \"user\", \"content\": \"What could be a business area that might be ripe for an Agentic AI solution? Keep the answer to 1 sentence.\"}]\n",
     "\n",
     "# Then make the first call:\n",
     "\n",
-    "response =\n",
+    "response1 = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
     "\n",
-    "# Then read the business idea:\n",
+    "business_area = response1.choices[0].message.content\n",
+    "print(business_area)\n",
     "\n",
-    "business_idea = response.\n",
+    "# Add assistant reply to the conversation\n",
+    "messages.append({\"role\": \"assistant\", \"content\": business_area})\n",
     "\n",
-    "# And repeat! In the next message, include the business idea within the message"
+    "# Ask next question *in the same thread*\n",
+    "messages.append({\"role\": \"user\", \"content\": \"What is a pain-point in that industry? Keep it to 1 sentence.\"})\n",
+    "\n",
+    "\n",
+    "# # Then read the business idea:\n",
+    "response2 = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
+    "\n",
+    "pain_point = response2.choices[0].message.content\n",
+    "print(pain_point)\n",
+    "\n",
+    "# # And repeat! In the next message, include the business idea within the message\n",
+    "\n",
+    "messages.append({\"role\": \"assistant\", \"content\": pain_point})\n",
+    "\n",
+    "# Ask next question *in the same thread*\n",
+    "messages.append({\"role\": \"user\", \"content\": \"What could be an Agentic AI solution to that pain-point? Keep the answer to 1 sentence.\"})\n",
+    "\n",
+    "\n",
+    "response3 = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
+    "solution = response3.choices[0].message.content\n",
+    "print(f\"Solution : {solution}\")\n"
    ]
   },
   {
@@ -359,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
